2015-04-17  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (pwdgrp::fetch_account_from_windows): Always revert SID
	subauth count after checking for known domain.

2015-04-17  Corinna Vinschen  <corinna@vinschen.de>

	* pwdgrp.h: Add comment to explain below change.
	(struct pg_pwd): Convert sid member to BYTE array.
	(struct pg_grp): Ditto.
	* grp.cc (pwdgrp::parse_group): Accommodate above change.
	* passwd.cc (pwdgrp::parse_passwd): Ditto.

2015-04-12  Corinna Vinschen  <corinna@vinschen.de>

	* shm.cc (shmget): Fetch segment size from server rather than using
	size argument to accommodate existing segments.  Add comment to explain
	why.

2015-04-10  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MAJOR): Bump to 2000.
	(CYGWIN_VERSION_DLL_MINOR): Set to 0.

2015-04-04  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* exceptions.cc (call_signal_handler): Set mcontext.cr2 to the
	faulting address.

2015-04-02  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* exceptions.cc (call_signal_handler): Only bother to construct
	the ucontext for signal handlers with SA_SIGINFO set.  Set
	mcontext.oldmask.

2015-04-04  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* exceptions.cc (call_signal_handler): Zero initialize context and set
	context flags, as RlCaptureContext doesn't.

2015-04-09  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_dsp.cc (fhandler_dev_dsp::open): Call open_null.

2015-04-08  Corinna Vinschen  <corinna@vinschen.de>

	* pwdgrp.h (sidfromuid): New inline function.
	(sidfromgid): Ditto.
	* fhandler_disk_file.cc (fhandler_disk_file::fchown): Use sidfromuid.
	* quotactl.cc (quotactl): Use sidfromuid and sidfromgid.

2015-04-08  Corinna Vinschen  <corinna@vinschen.de>

	* include/cyggwin/acl.h (struct __acl16): Move from here...
	* sec_acl.cc: ...to here.

2015-04-07  Corinna Vinschen  <corinna@vinschen.de>

	* tty.h (class tty): Remove unused 32/64 bit interoperability
	considerations.
