@@ -1,3 +1,7 @@
+2015-04-21  Corinna Vinschen  <corinna@vinschen.de>
+
+	* include/libgen.h: Remove in favor of newlib version.
+
 2015-04-17  Corinna Vinschen  <corinna@vinschen.de>
 
 	* uinfo.cc (pwdgrp::fetch_account_from_windows): Always revert SID
